@@ -4,6 +4,8 @@
 
 	* src/lmprun.sh: removed
 
+	* src/gitfilter.sh: awesome wrapper around 'git filter-branch' added
+
 2014-08-26	Erik E. Lorenz	<erik.e.lorenz@gmail.com>
 
 	* src/changelogfiles.sh: renamed to changelogupdate.sh
